Added beta config

--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "url": "https://github.com/patrickpietens/blokks-legal.git"
   },
   "scripts": {
+    "start": "npm run build:development",
     "reset": "find node_modules/* -type 'd' | grep -v 'pikaday' | xargs rm -rf  && npm install && cd node_modules && ln -s ../src/scripts/app app && cd ..",
-    "development": "NODE_ENV=development gulp",
-    "staging": "npm update && NODE_ENV=staging gulp",
-    "production": "npm update && NODE_ENV=production gulp"
+    "build:development": "NODE_ENV=development gulp",
+    "build:staging": "npm update && NODE_ENV=staging gulp",
+    "build:beta": "npm update && NODE_ENV=beta gulp",
+    "build:production": "npm update && NODE_ENV=production gulp"
   },
   "browser": {},
   "browserify": {
